--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^11.3.2",
     "discord.js-musicbot-addon": "^1.10.3",
     "express": "^4.16.3",
+    "hastebin-gen": "^1.3.1",
     "finalhandler": "^1.1.1",
     "fortnite": "^3.0.0",
     "fs": "^0.0.2",
