--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "superagent": "3.8.3",
     "python": "0.0.4",
     "request": "^2.85.0",
-    "router": "^1.3.2",
+    "codes-official": "0.0.15",
     "snekfetch": "^3.6.4",
     "simple-youtube-api": "^5.0.2",
     "sqlite": "^2.9.1",
